# ChessV2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindSFML.cmake
src/: main.cpp
src/game/headers/: Board.h  Game.h
src/game/source/: Board.cpp  Game.cpp
src/pieces/headers/: Bishop.h  FreeSpace.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
src/pieces/source/: Bishop.cpp  FreeSpace.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
